Publications.css
.u-section-1 .u-sheet-1 {
  min-height: 150px;
}

.u-section-1 .u-list-1 {
  margin-top: 30px;
  margin-bottom: 0;
}

.u-section-1 .u-repeater-1 {
  grid-gap: 10px 10px;
  grid-template-columns: 100%;
  min-height: 143px;
}

.u-section-1 .u-container-layout-1 {
  padding: 10px;
}

.u-section-1 .u-text-1 {
  font-size: 1.875rem;
  font-weight: 700;
  margin: 0;
}

.u-section-1 .u-text-2 {
  margin: 0 auto 0 0;
}

.u-section-1 .u-container-layout-2 {
  padding: 10px;
}

.u-section-1 .u-text-3 {
  font-size: 1.875rem;
  font-weight: 700;
  margin: 0;
}

.u-section-1 .u-text-4 {
  margin: 0 auto 0 0;
}

.u-section-1 [class*="u-btn-"] {
  background-image: none;
  font-size: 1.125rem;
  padding: 0;
}

@media (max-width: 575px) {
  .u-section-1 .u-text-1 {
    font-size: 1.5rem;
  }

  .u-section-1 .u-text-3 {
    font-size: 1.5rem;
  }
}

.u-section-2 .u-sheet-1 {
  min-height: 4206px;
}

.u-section-2 .u-text-1 {
  font-size: 1.875rem;
  font-weight: 700;
  margin: 44px auto 0 11px;
}

.u-section-2 .u-list-1 {
  width: 1129px;
  margin: 11px 0 60px auto;
}

.u-section-2 .u-repeater-1 {
  grid-gap: 10px 10px;
  grid-template-columns: 100%;
  min-height: 4036px;
}

.u-section-2 .u-container-layout-1 { padding: 10px 0; }
.u-section-2 .u-container-layout-2 { padding: 10px 0; }
.u-section-2 .u-container-layout-3 { padding: 10px 0; }
.u-section-2 .u-container-layout-4 { padding: 10px 0; }
.u-section-2 .u-container-layout-5 { padding: 10px 0; }

.u-section-2 .u-text-2,
.u-section-2 .u-text-4,
.u-section-2 .u-text-6,
.u-section-2 .u-text-8,
.u-section-2 .u-text-10 {
  font-size: 1.5rem;
  font-weight: 700;
  margin: 0 auto 0 0;
}

.u-section-2 .u-text-3,
.u-section-2 .u-text-5,
.u-section-2 .u-text-7,
.u-section-2 .u-text-9,
.u-section-2 .u-text-11 {
  margin: 20px auto 0 0;
}

.u-section-2 [class*="u-btn-"] {
  background-image: none;
  font-size: 1.125rem;
  padding: 0;
}

@media (max-width: 1199px) {
  .u-section-2 .u-list-1 { width: 940px; }
}

@media (max-width: 991px) {
  .u-section-2 .u-list-1 { width: 720px; }
}

@media (max-width: 767px) {
  .u-section-2 .u-list-1 { width: 540px; }
}

@media (max-width: 575px) {
  .u-section-2 .u-text-1 { font-size: 1.5rem; }
  .u-section-2 .u-list-1 { width: 340px; }
}

